Added Cat Levels

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </div>
   <div>
     <h4 data-bind="text: name"></h4>
+    <h4 data-bind="text: levels"></h4>
     <h5>Number of Clicks <span data-bind="text: clicks"></span></h5>
     <img src="" data-bind="click: addClick, attr: {src: imgSrc}">
   </div>
